--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "drizzle-orm": "^0.44.2",
     "framer-motion": "^12.23.3",
     "jose": "^6.0.11",
+    "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
     "next": "15.3.5",
     "react": "^19.0.0",
