--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.1",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.3"
